--- a/.github/workflows/Windows-CRD1px.yml
+++ b/.github/workflows/Windows-CRD1px.yml
@@ -1,15 +1,17 @@
 name: Windows-CRD1px
 
-on: 
+on:
   workflow_dispatch:
-    inputs:
+  push:
+    branches:
+      - main
+          inputs:
       authcode:
         description: 'Enter CRD code'
         required: true
       pincode:
         description: 'Six digit Pin'
         required: true
-  
 jobs:
   build:
     runs-on: windows-latest
